@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-30T16:23:01Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
+  "timestamp" : "2022-03-31T01:18:22Z",
+  "count" : 2,
+  "count_minmax" : [ 0, 2 ],
   "count_prev_day_inc" : 0,
   "count_prev_day_dec" : 5,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
   "uniques_prev_day_inc" : 0,
   "uniques_prev_day_dec" : 3
 }
