@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-30T16:23:01Z",
-  "count_outdated" : 481,
-  "uniques_outdated" : 256,
-  "count" : 1727,
-  "uniques" : 312,
+  "timestamp" : "2022-03-31T01:18:22Z",
+  "count_outdated" : 1034,
+  "uniques_outdated" : 265,
+  "count" : 1734,
+  "uniques" : 316,
   "clones" : [
-    {
-      "timestamp": "2022-03-16T00:00:00Z",
-      "count": 548,
-      "count_minmax": [ 2, 553 ],
-      "uniques": 6,
-      "uniques_minmax": [ 1, 9 ]
-    },
     {
       "timestamp": "2022-03-18T00:00:00Z",
       "count": 19,
@@ -74,6 +67,13 @@
       "count_minmax": [ 13, 13 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-03-30T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
