@@ -1,12 +1,7 @@
 {
-  "count": 1246,
-  "uniques": 32,
+  "count": 700,
+  "uniques": 30,
   "clones": [
-    {
-      "timestamp": "2022-03-16T00:00:00Z",
-      "count": 548,
-      "uniques": 6
-    },
     {
       "timestamp": "2022-03-18T00:00:00Z",
       "count": 19,
@@ -51,6 +46,11 @@
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 13,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-03-30T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
