@@ -1,3 +1,9 @@
+2022-03-31T01:18:22Z:
+* notice: last 14d: all unq: 700 30
+* notice: prev accum: outdated-all outdated-unq / all unq: 481 256 / 1727 312
+* notice: next accum: outdated-all outdated-unq / all unq: 1034 265 / 1734 316
+* notice: prev json diff // prev day diff: unq all: +1 +2 / -0 -0 // +1 +2 / -0 -0
+
 2022-03-30T16:23:01Z:
 * notice: last 14d: all unq: 1246 32
 * notice: prev accum: outdated-all outdated-unq / all unq: 481 256 / 1730 314
